--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "react-share": "^4.4.1",
     "react-tsparticles": "^2.6.0",
     "react-typed": "^1.2.0",
